--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:text="MODIFICAR PERFIL"
-        android:onClick="modificarPerfil"
+        android:onClick="PantallaModificarPerfil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvFullname_Perfil" />
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:onClick="cambiarPass"
+        android:onClick="PantallaCambiarPass"
         android:text="CAMBIAR CONTRASEÑA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
