--- a/app/src/main/res/menu/menu_actionbar.xml
+++ b/app/src/main/res/menu/menu_actionbar.xml
@@ -5,5 +5,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="Acerca de"
-        android:id="@+id/acercade"/>
+        android:id="@+id/acercade_menu_actionbar"/>
 </menu>
