--- a/app/src/main/res/layout/crearconnection.xml
+++ b/app/src/main/res/layout/crearconnection.xml
@@ -10,21 +10,21 @@
         android:id="@+id/tvNombreConnection_PantallaCrearConnection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:text="Nombre de la conexion"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/etNombreConnection_PantallaCrearConnection"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Introduce un nombre..."
         android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNombreConnection_PantallaCrearConnection" />
 
@@ -32,42 +32,42 @@
         android:id="@+id/tvIpConnection_PantallaCrearConnection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:text="Direccion IP (formato ***.***.***.***)"
+        android:text="Direccion IP (en formato ***.***.***.***)"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etNombreConnection_PantallaCrearConnection" />
 
     <EditText
         android:id="@+id/etIpConnection_PantallaCrearConnection"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Introduce una IP..."
         android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvIpConnection_PantallaCrearConnection" />
 
     <Button
         android:id="@+id/btnProbarConnection_PantallaCrearConnection"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="PROBAR CONEXION"
         android:onClick="probarConnection"
+        android:text="PROBAR CONEXION"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etIpConnection_PantallaCrearConnection" />
 
     <Button
         android:id="@+id/btnGuardarConnection_PantallaCrearConnection"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="GUARDAR CONEXION"
         android:onClick="guardarConnection"
+        android:text="GUARDAR CONEXION"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnProbarConnection_PantallaCrearConnection" />
