--- a/app/src/main/res/layout/modificarpass.xml
+++ b/app/src/main/res/layout/modificarpass.xml
@@ -12,13 +12,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:text="Introduzca la contraseña"
+        android:text="Introduzca su contraseña actual"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/etPass_ModificarPass"
-        android:layout_width="wrap_content"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
@@ -39,7 +39,7 @@
 
     <EditText
         android:id="@+id/etNuevaPass_ModificarPass"
-        android:layout_width="wrap_content"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
@@ -60,7 +60,7 @@
 
     <EditText
         android:id="@+id/etConfirmarPass_ModificarPass"
-        android:layout_width="wrap_content"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
