--- a/app/src/main/res/layout/pantallainicio.xml
+++ b/app/src/main/res/layout/pantallainicio.xml
@@ -20,28 +20,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
-        android:minWidth="200dp"
-        android:minHeight="200dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
-
     <Button
         android:id="@+id/btnIniciar_PantallaInicio"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="164dp"
+        android:layout_marginTop="500dp"
         android:onClick="PantallaIniciarSesion"
         android:text="INICIAR SESION"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="@+id/ivFondo_PantallaInicio" />
 
     <Button
         android:id="@+id/btnCrear_PantallaInicio"
