--- a/app/src/main/res/layout/passolvidada.xml
+++ b/app/src/main/res/layout/passolvidada.xml
@@ -32,8 +32,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="ENVIARME LA CONTRASEÑA"
         android:onClick="EnviarPass"
+        android:text="MOSTRAR CONTRASEÑA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etMail_PassOlvidada" />
